Fix wrapping on mobile.

--- a/src/mini-bootstrap.scss
+++ b/src/mini-bootstrap.scss
@@ -12,6 +12,10 @@
     align-items: flex-start !important;
 }
 
+.flex-wrap {
+    flex-wrap: wrap !important;
+}
+
 .text-center {
     text-align: center;
 }
