--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,12 +52,6 @@ footer {
     }
 }
 
-@media screen and (max-width: 800px) {
-    .content {
-        width: max-content;
-    }
-}
-
 h1,
 h2,
 h3,
